# Server_Aks_Ide

./: .env  .gitignore  Cargo.toml  Readme.md  diesel.toml  env_example
migrations/2024-11-24-101024_email_verifications/: down.sql  up.sql
migrations/2024-11-25-073648_users/: up.sql
src/: db_models.rs  main.rs  schema.rs
src/database/: messages.rs  mod.rs  models.rs
src/handlers/authentication/: actors.rs  check_email.rs  create_user.rs  mod.rs  send_token.rs  verify_email.rs
src/route/: auth_route.rs
