[package]
name = "server_aks_ide"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.0.0"
dotenv = "0.15.0"
serde = "1.0.215"
serde_json = "1.0.88"
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
lettre = "0.11.10"
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres"] }
